Apache Cayenne Release Notes
============================

For the latest information visit project web site: 
https://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 4.2.M1
Date:
----------------------------------
Changes/New Features:

CAY-2467 New type-aware Property API
CAY-2507 Property API to use path aliases
CAY-2508 Create api to add aliases in expressions
CAY-2510 Create builder to load custom modules into plugins and modeler
CAY-2511 Contribute custom properties for attributes
CAY-2517 EventManager: optimization of adding listeners
CAY-2518 Add method to append having qualifier expression to ObjectSelect
CAY-2520 Split ObjectId into several specialized variants
CAY-2522 Make ObjectSelect a direct query
CAY-2523 Deprecate SelectQuery
CAY-2525 Deprecate OpenBase adapter
CAY-2539 Import procedures with the help of MergerToken
CAY-2540 Modeler: redesign dbRelationship editor dialog
CAY-2542 Modeler: redesign ObjRelationship editor dialog
CAY-2543 Move ResultSetMapping generation from metadata to translator
CAY-2549 Modeler: Redesign ObjAttribute editor dialog
CAY-2555 Use explicit ArcId in GraphChangeHandler methods
CAY-2557 Add java.time.Duration and java.time.Period to supported types
CAY-2562 Make ROPServerModule autoloaded
CAY-2563 Deprecate old scalarQuery methods in SQLSelect
CAY-2568 Class Generation: Superclass Package setting persistence
CAY-2569 Custom 'Naming Strategy' in Cayenne Modeler
CAY-2570 Use MySQL adapter for latest versions of MariaDB
CAY-2579 Review and possibly relax usage of readonly flag of ObjRelationship
CAY-2585 Rename scalarQuery and params methods in SQLSelect
CAY-2589 - Allow optionally using a local query cache that is separate from the shared query cache.
CAY-2590 Add method to set query timeout to queries
CAY-2592 Modeler: make all datamaps selected in global cgen tab

Bug Fixes:
