@@ -1086,6 +1086,21 @@ literal|"testComplexChangeOrder"
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testConfigFromDataMap
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|test
+argument_list|(
+literal|"testConfigFromDataMap"
+argument_list|)
+expr_stmt|;
+block|}
 comment|/**      * CREATE TABLE APP.A (      * id INTEGER NOT NULL,      *<p>      * PRIMARY KEY (id)      * );      *<p>      * CREATE TABLE APP.A_A (      * A1_ID INTEGER NOT NULL,      * A2_ID INTEGER NOT NULL,      *<p>      * PRIMARY KEY (A1_ID, A2_ID),      * CONSTRAINT A_A1 FOREIGN KEY (A1_ID) REFERENCES APP.A (ID),      * CONSTRAINT A_A2 FOREIGN KEY (A2_ID) REFERENCES APP.A (ID)      * );      *<p>      * If one table has many-to-many relationship with it self ObjEntity should have two      * collection attributes in both directions      *      * @throws Exception      */
 annotation|@
 name|Test
@@ -1895,26 +1910,19 @@ operator|=
 name|mapFile
 expr_stmt|;
 block|}
-name|DbImportConfiguration
-name|parameters
+name|DbImportDataSourceConfig
+name|dataSource
 init|=
 name|cdbImport
 operator|.
-name|createConfig
-argument_list|(
-name|mock
-argument_list|(
-name|Logger
-operator|.
-name|class
-argument_list|)
-argument_list|)
+name|getDataSource
+argument_list|()
 decl_stmt|;
 name|prepareDatabase
 argument_list|(
 name|name
 argument_list|,
-name|parameters
+name|dataSource
 argument_list|)
 expr_stmt|;
 try|try
@@ -1936,7 +1944,7 @@ finally|finally
 block|{
 name|cleanDb
 argument_list|(
-name|parameters
+name|dataSource
 argument_list|)
 expr_stmt|;
 block|}
@@ -1945,8 +1953,8 @@ specifier|private
 name|void
 name|cleanDb
 parameter_list|(
-name|DbImportConfiguration
-name|dbImportConfiguration
+name|DbImportDataSourceConfig
+name|dataSource
 parameter_list|)
 throws|throws
 name|Exception
@@ -1957,7 +1965,7 @@ name|Class
 operator|.
 name|forName
 argument_list|(
-name|dbImportConfiguration
+name|dataSource
 operator|.
 name|getDriver
 argument_list|()
@@ -1975,7 +1983,7 @@ name|DriverManager
 operator|.
 name|getConnection
 argument_list|(
-name|dbImportConfiguration
+name|dataSource
 operator|.
 name|getUrl
 argument_list|()
@@ -2497,8 +2505,8 @@ parameter_list|(
 name|String
 name|sqlFile
 parameter_list|,
-name|DbImportConfiguration
-name|dbImportConfiguration
+name|DbImportDataSourceConfig
+name|dataSource
 parameter_list|)
 throws|throws
 name|Exception
@@ -2530,7 +2538,7 @@ name|Class
 operator|.
 name|forName
 argument_list|(
-name|dbImportConfiguration
+name|dataSource
 operator|.
 name|getDriver
 argument_list|()
@@ -2548,7 +2556,7 @@ name|DriverManager
 operator|.
 name|getConnection
 argument_list|(
-name|dbImportConfiguration
+name|dataSource
 operator|.
 name|getUrl
 argument_list|()
