@@ -18,30 +18,30 @@
 	under the License.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 	http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<name>DbImporterMojo Test1</name>
-	<groupId>org.apache.maven.plugin-testing</groupId>
-	<artifactId>maven-plugin-testing</artifactId>
-	<version>1.0-SNAPSHOT</version>
+    <name>DbImporterMojo Test1</name>
+    <groupId>org.apache.maven.plugin-testing</groupId>
+    <artifactId>maven-plugin-testing</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-	<modelVersion>4.0.0</modelVersion>
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>cayenne-maven-plugin</artifactId>
-				<configuration>
-					<map>target/test-classes/org/apache/cayenne/tools/dbimport/testImportNewDataMap.map.xml</map>
-					<dataSource>
-                    	<driver>org.apache.derby.jdbc.EmbeddedDriver</driver>
-                    	<url>jdbc:derby:memory:DbImporterMojoTest;create=true</url>
-					</dataSource>
-					<project implementation="org.apache.cayenne.stubs.CayenneProjectStub"/>
+    <modelVersion>4.0.0</modelVersion>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>cayenne-maven-plugin</artifactId>
+                <configuration>
+                    <map>target/test-classes/org/apache/cayenne/tools/dbimport/testConfigFromDataMap.map.xml</map>
+                    <dataSource>
+                        <driver>org.apache.derby.jdbc.EmbeddedDriver</driver>
+                        <url>jdbc:derby:memory:DbImporterMojoTest;create=true</url>
+                    </dataSource>
+                    <project implementation="org.apache.cayenne.stubs.CayenneProjectStub"/>
 
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
