@@ -1,7 +1,7 @@
 Apache Cayenne Release Notes
 ============================
 
-For the latest information visit project web site: 
+For the latest information visit project web site:
 https://cayenne.apache.org/
 
 To browse individual bug reports check out project issue tracker:
@@ -72,6 +72,7 @@ CAY-2588 IdRowReader: ArrayIndexOutOfBoundsException
 CAY-2591 Modeler: project becomes dirty after click on dbImport or cgen tab
 CAY-2594 DbImport: AutoAdapter resolving inside an import operation hangs up the op on Hana DB
 CAY-2595 ObjAttributes are not sorted in alphabetical ordering on save
+CAY-2596 DbImport xml config changes after dbImport plugin task execution
 
 ----------------------------------
 Release: 4.1.B1
